--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.11MB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-313.7KB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇨🇦 加拿大-609.6KB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.71MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇦 加拿大-688.4KB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 38.68.135.123, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇸🇬 新加坡-1.10MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.04MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇫🇷 法国-551.5KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
   - {name: 🇨🇦 加拿大-1.85MB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-420.1KB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-614.4KB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-12.27MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-609.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-688.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-609.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-688.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-609.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-688.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-609.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-688.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-609.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-688.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-609.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-688.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-609.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-688.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
