--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-688.4KB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 38.68.135.123, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇸🇬 新加坡-1.10MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.04MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇫🇷 法国-551.5KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇦 加拿大-1.85MB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-420.1KB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-614.4KB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-12.27MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.26MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活8天)香港-2.69MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇰🇷 韩国-1.38MB/s(Youtube:不良林), server: 146.56.110.129, port: 53702, type: vmess, uuid: d0ee8ec0-ef63-41aa-9087-11edf7a978b9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-375.8KB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-254.1KB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: 104.224.188.29, port: 38226, type: vmess, uuid: 9299fb78-290c-4aad-befb-0130c074a622, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.83MB/s(Youtube:不良林), server: sg01.henet.cyou, port: 20000, type: vmess, uuid: 9de08dca-c684-4032-b6e8-6b1e5bb3c2b7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: sg01.henet.cyou}}
+  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-1.52MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-482.6KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-688.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.69MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-375.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-254.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-482.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-688.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.69MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-375.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-254.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-482.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-688.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.69MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-375.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-254.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-482.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活8天)香港-2.69MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-688.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.69MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-375.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-254.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-482.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-688.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.69MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-375.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-254.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-482.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-688.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.69MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-375.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-254.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-482.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-688.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-314.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-420.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-614.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.69MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-375.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-254.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-482.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
