--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.26MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活8天)香港-2.69MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇰🇷 韩国-1.38MB/s(Youtube:不良林), server: 146.56.110.129, port: 53702, type: vmess, uuid: d0ee8ec0-ef63-41aa-9087-11edf7a978b9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇸🇬 新加坡-194.7KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-367.5KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-375.8KB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-254.1KB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: 104.224.188.29, port: 38226, type: vmess, uuid: 9299fb78-290c-4aad-befb-0130c074a622, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.83MB/s(Youtube:不良林), server: sg01.henet.cyou, port: 20000, type: vmess, uuid: 9de08dca-c684-4032-b6e8-6b1e5bb3c2b7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: sg01.henet.cyou}}
-  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-612.6KB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-1.52MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-482.6KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.12MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-653.4KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-399.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-194.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-375.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-254.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-482.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-653.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-194.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-375.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-254.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-482.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-653.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-194.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-375.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-254.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-482.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-653.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活8天)香港-2.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-194.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-375.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-254.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-482.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-653.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-194.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-375.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-254.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-482.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-653.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-194.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-375.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-254.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-482.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-653.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-194.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-375.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-254.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-482.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-653.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
